tests/machine/x/kotlin/q1.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
tests/machine/x/kotlin/q1.kt:62:45: error: unresolved reference: returnflag
        __res.add(Result(returnflag = g.key.returnflag, linestatus = g.key.linestatus, sum_qty = sum(run {
                                            ^
tests/machine/x/kotlin/q1.kt:62:76: error: unresolved reference: linestatus
        __res.add(Result(returnflag = g.key.returnflag, linestatus = g.key.linestatus, sum_qty = sum(run {
                                                                           ^
tests/machine/x/kotlin/q1.kt:77:19: error: type mismatch: inferred type is Double but Lineitem was expected
        __res.add(x.l_extendedprice * (1 - x.l_discount))
                  ^
tests/machine/x/kotlin/q1.kt:83:19: error: type mismatch: inferred type is Double but Lineitem was expected
        __res.add(x.l_extendedprice * (1 - x.l_discount) * (1 + x.l_tax))
                  ^
